--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ li {
 }
 
 .habbit {
-
+  margin:10px;
 }
 
 .habbit-count {
@@ -22,4 +22,13 @@ li {
 .habbit-button {
   border:0;
   background-color: transparent;
+}
+
+nav {
+  background-color: cadetblue;
+  color:cornsilk;
+}
+
+body {
+  background-color: rgba(0,0,0,0.5);
 }
