--- a/src/App.css
+++ b/src/App.css
@@ -6,30 +6,7 @@ li {
   list-style: none;
 }
 
-.habbit {
-  margin:10px;
-}
-
-.habbit-count {
-  display: inline-block;
-  border-radius: 50px;
-  border:1px solid burlywood;
-  width:25px;
-  height: 25px;
-  text-align: center;
-  line-height: 25px;
-}
-
-.habbit-button {
-  border:0;
-  background-color: transparent;
-}
-
-nav {
-  background-color: cadetblue;
-  color:cornsilk;
-}
-
-body {
-  background-color: rgba(0,0,0,0.5);
+.content {
+  margin:0 auto;
+  max-width: 800px;
 }
